2003-06-13  Richard Hult  <richard@imendio.com>

	* *: Update contact information.

2003-05-27  Richard Hult  <rhult@codefactory.se>

	* src/drwright.c (popup_break_cb): Add "take a break" feature.
	(drwright_new, gconf_notify_cb): Make take a break item sensitive
	only when drwright is enabled.

2003-05-24  Richard Hult  <rhult@codefactory.se>

	* src/disclosure-widget.[ch]: Remove.
	
	* src/drwright.c (popup_menu_cb): Popup context menu on
	shift-f10. Fixes part of bug #112474.
	(icon_event_box_expose_event_cb): Draw focus rectangle.

	* data/images: Use colors from the HIG palette and crop the icons
	a bit.

2003-05-22  Richard Hult  <rhult@codefactory.se>

	* Makefile.am:
	* data/glade/drw-preferences.glade:
	* src/Makefile.am:
	* src/drw-break-window.c: (drw_break_window_class_init),
	(drw_break_window_init), (clock_timeout_cb),
	(unlock_entry_activate_cb), (unlock_clicked_cb),
	(get_layout_location), (label_expose_event_cb):
	* src/drw-preferences.c: (gconf_notify_cb), (drw_preferences_new):
	* src/drwright.c: (setup_debug_values), (update_icon),
	(blink_timeout_cb), (start_blinking), (stop_blinking),
	(maybe_change_state), (update_tooltip), (gconf_notify_cb),
	(break_window_done_cb), (break_window_postpone_cb), (drwright_new):

	Lots of changes, remove unlock feature and replace it with a
	postpone feature, and remove all the crap that was a workaround
	for not having that before. Always update the icon and tooltip
	after postponing, or after a break is finished.
	
2003-05-19  Richard Hult  <rhult@codefactory.se>

	* Makefile.am (SUBDIRS): Add data.

2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-05-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "cs" to ALL_LINGUAS.

2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "bg" "cy" "ja" "pt_BR" "sr" "zh_CN" to ALL_LINGUAS.

2003-04-17  Richard Hult  <rhult@codefactory.se>

	* Release 0.16.
	